[project]
name = "keiko-memoria-viva"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.2.6",
]


[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
# Zielversion für bestmögliche Regelanwendung (falls Projektversion abweicht, bitte anpassen)
target-version = "py310"
extend-exclude = ["**/*.ipynb"]

[tool.ruff.lint]
# Entspricht der flake8-Integration mit E203-Ignore (W503 ist deprecated)
ignore = ["E203"]

[tool.mypy]
python_version = "3.10"
# Externe/optionale Abhängigkeiten (pytest, psutil, etc.) nicht typprüfen
ignore_missing_imports = true
# Importierte Module nicht verfolgen (nur explizit geprüfte Pakete)
follow_imports = "skip"
# Explizite Optional-Typen erzwingen (Default von neueren mypy-Versionen)
no_implicit_optional = true
warn_unused_ignores = true
pretty = true

